# pennylane-mcp-server

./: .env.example  .gitignore  CLAUDE_CONTEXT.md  README.md  pyproject.toml  requirements.txt
src/pennylane_mcp/: api.py  constants.py  dossier_manager.py  models.py  server.py
tests/: test_security.py
