[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pennylane-mcp-server"
version = "3.0.0"
description = "Serveur MCP pour l'API Pennylane - mono-société"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "pennylane", "comptabilite", "accounting", "expert-comptable"]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pennylane-mcp-server = "pennylane_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pennylane_mcp"]
